--- a/src/App.css
+++ b/src/App.css
@@ -22,6 +22,12 @@
   font-size: large;
 }
 
+a {
+  color: #00b0f5;
+  cursor: pointer;
+  text-decoration: underline;
+}
+
 @keyframes App-logo-spin {
   from { transform: rotate(0deg); }
   to { transform: rotate(360deg); }
